# carviary

./: .gitignore  README.md  autolava.md  delta.md  experiment_grass.md  grass_debug.txt  grass_probe.txt  mejora_testeada.md  modern_gl.md  new_camera_style.md  package.json  profile.json  report.html  sdl3.md  slide.md
docs/: adaptive_exposure.md  alias_gpu_blending.md  burn_marks.md  como_romper_el_motor_intentando_pasar_a_sp.md  modo_offline.md  postfx.md  profiling.md  render_order.md  true_trails.md  water_lightmaps.md
scripts/: analyze.js  debug.js  profile.js
src_cpp/: CMakeLists.txt  cl_demo.cpp  cl_main.cpp  cl_parse.cpp  cmd.cpp  common.cpp  gl_font.cpp  gl_md2.cpp  gl_mdl.cpp  gl_model.cpp  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_screen.cpp  gl_texman.cpp  gl_vidnt.cpp  gl_warp.cpp  host.cpp  in_win.cpp  keys.cpp  menu.cpp  menu_multi.cpp  menu_quit.cpp  net_dgrm.cpp  net_main.cpp  net_wins.cpp  net_wipx.cpp  pr_cmds.cpp  pr_native.cpp  snd_dma.cpp  snd_mix.cpp  snd_win.cpp  sv_main.cpp  sv_move.cpp  sys_win.cpp  view.cpp  wad.cpp  winquake.rc  zone.cpp
src_cpp/headers/: client.h  keys.h  menu.h  net.h  quakedef.h  resource.h  winquake.h
src_sdl3/: CMakeLists.txt  cd_sdl.cpp  cl_demo.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  common.cpp  console.cpp  cvar.cpp  gl_blood.cpp  gl_core.cpp  gl_crosshair.cpp  gl_dof.cpp  gl_draw.cpp  gl_explosion.cpp  gl_exposure.cpp  gl_flames.cpp  gl_flares.cpp  gl_font.cpp  gl_grass.cpp  gl_gunshot_decal.cpp  gl_lamp.cpp  gl_magic.cpp  gl_mat4.cpp  gl_md2.cpp  gl_mdl.cpp  gl_model.cpp  gl_part.cpp  gl_postfx.cpp  gl_proc.cpp  gl_profiler.cpp  gl_profiler.h  gl_render.cpp  gl_rmain.cpp  gl_rmisc.cpp  gl_rscript.cpp  gl_rsurf.cpp  gl_screen.cpp  gl_sky.cpp  gl_sprite.cpp  (+30 more)
src_sdl3/headers/: client.h  common.h  draw.h  gl_core.h  gl_mat4.h  gl_model.h  gl_render.h  gl_rscript.h  glquake.h  menu.h  net.h  net_bsd.h  progs.h  protocol.h  quakedef.h  render.h  sdlquake.h  server.h  wad.h
